# Parser-by-price-hh.ru

./: README.md  main..py  pyproject.toml
data/: vacancies.json
src/: json_worker.py  parser.py  user_interactive.py  vacancy.py
