[tool.poetry]
name = "parser-by-price-hh-ru"
version = "0.1.0"
description = "Программа, которая будет получать информацию о вакансиях с платформы hh.ru в России"
authors = ["mmrxsky"]
readme = "README.md"
packages = [{include = "parser_by_price_hh"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
